--- a/{{ cookiecutter.repo_name }}/Makefile
+++ b/{{ cookiecutter.repo_name }}/Makefile
@@ -1,10 +1,4 @@
-.PHONY: clean data lint requirements sync_data_to_s3 sync_data_from_s3
-
-#################################################################################
-# GLOBALS                                                                       #
-#################################################################################
-
-BUCKET = {{ cookiecutter.s3_bucket }}
+.PHONY: clean data requirements 
 
 #################################################################################
 # COMMANDS                                                                      #
@@ -18,15 +12,6 @@ data: requirements
 
 clean:
 	find . -name "*.pyc" -exec rm {} \;
-
-lint:
-	flake8 --exclude=lib/,bin/,docs/conf.py .
-
-sync_data_to_s3:
-	aws s3 sync data/ s3://$(BUCKET)/data/
-
-sync_data_from_s3:
-	aws s3 sync s3://$(BUCKET)/data/ data/
 
 #################################################################################
 # PROJECT RULES                                                                 #
